--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,44 +4,44 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:KbOOhqVZIwrjfz6VzfE+9vvzIWHIn9+FKKbUJ3iOlR5d9vEAQuL2IWa7So0ZMFMLZpfwxQsGdqwT2PmInmXhDto=,iv:bjLS5j7v5B7kVByTDodDlIo0QvcoZJB4IH4ZscVETak=,tag:EzHn8MsdAIZDBhTRObCawA==,type:comment]
-    #ENC[AES256_GCM,data:3rRSscyPFjcxrVCXRoUuAObxitXbmegZknMuU4Kcq3CSvRZly7RkG/OfYgw=,iv:QhyV6Gbb6sz/S7Lsc1p1Oux6pR2ZI2mYrB9D6iubSsI=,tag:xkX18UqZqdGoFpNeJYFzRA==,type:comment]
-    VIP: ENC[AES256_GCM,data:2ua8+bGiVwnvdv5xag==,iv:EI5E9EDp+82YRytr3J7jkR3lu4Ap+q+hRCstLh/nKyo=,tag:6EnVbGHiyQNW2ZCXSuwDdw==,type:str]
-    #ENC[AES256_GCM,data:2jRoQ4yPwJwZ6qyo+GZamEzFPcDU+wl0hRIU,iv:60x3+N1cFQh5vZQ06StfaMv+7kgY1O4nAmsL+6smlUs=,tag:xX0Jf8INX4ukXZNOL8Qbww==,type:comment]
-    #ENC[AES256_GCM,data:l1i9qz1Inoxxjqd26ZZb3lvWnwsJzRXSuNYhVR+pLpIwAjCYvocSQmGyjHymYIT3ZMVw3cjQ8JefqDit7z6G0aKNqGxKsYmQzms4Egm/3Tvr/10FnGpHbXs=,iv:PfYeNRbGUhABHPAjSzR9yYU5xrVBe3xk2/K/Pi76pfM=,tag:Ls06mxPdDfDoNzgTWat3+A==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:jgqdyD4C6kpOPMyOAD8=,iv:bRc1JzFGkUXtHzpYD9nlRwRscojYni8SsXvjdu3ulK4=,tag:M4uQREusRIA5AkG98Elfwg==,type:str]
-    #ENC[AES256_GCM,data:AbL471hkIA406Aaf0GfACP3UR3UKlea1O4T8DtA16Lf+qQ==,iv:xxwKXwrUJ1xh1Q0FA9EcKAqkfw3x49KfcH3irnsxy9A=,tag:dYD6RgTqryHBZQV5NO9iRw==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:Twa7YBzDp9nN3WUsJg==,iv:KSanhxwsMZbLQWiwj0ZcAOSfPh1i3rEmU+06j6cZ5Q8=,tag:xAz5sBkxQZXVaDSCl9h0eQ==,type:str]
-    #ENC[AES256_GCM,data:EsLczeiYEzZJhtAZf4ldeohLud82E9laxOJg7dxVszIDzMVP2h7hWUksrMVy1AY=,iv:c+vfkHEToklsW3U5GFQ/6nEEcMMIDoiwdbXJoSt5K68=,tag:CXt9IZB+ZBsfi8w13xahEA==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:Yf2lkT+9I3XP0gGNrMOX5o1ZRftdPxeJdGLM8RYQ2w==,iv:0420Mb4Zw/48ggk/NYjvlXykFLVCIYEYHf1iwqS7+ZY=,tag:qfHL5sE5L5W376m1R+fCuQ==,type:str]
-    #ENC[AES256_GCM,data:T/YJ2thxKIQStbBPF8mXaN3Xw2l+9i892NML7O8xrWeJOX224lFTCF8xDwb4PiOqATIPheKN/bmz3P8BxuPtGzrYYHhO/eM0PukrbzTVIce4iQ==,iv:DQ0VHK6WW/e+HLhW6xtWfJE6WmP3eGrbibRidCP1NJk=,tag:KUR+yTu9wQHK6ovVWNayLQ==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:pf3deBez1eNVekd6SG8I,iv:fiCboY+E0ILmfRHPTgriqqKdTOiA4GcTHJXiM6t7Th0=,tag:icLpX9N9muwSeU0K1GSHDA==,type:str]
-    #ENC[AES256_GCM,data:DTog9OIaLsyaKdCCcgHHthxUJBFf/ZdRMS7S77eAkg3D,iv:TUxOmiJtTlMoRNSuJgn/qG+wWjJMFc5inIP1LTADHqE=,tag:OSkKnriN89zru0Nyhe6tyg==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:qj5svNARh3dLOYHMq+dE,iv:/uELy//DKMC6nPpAKpYKzS46B2Ykupw/VbdvINsRHb0=,tag:JSdY+jqFELhm8iq6QwHPjw==,type:str]
-    #ENC[AES256_GCM,data:56eqQXU2Q2LWyDXcZ3DlGEUbXE88MwZlHoSTDNpkAgHlyG4N5Z3x+q8WtATPExL/2mMUQDQxz/XfQevWet4CoSuE8xHDeQbT6CriImHgMNI=,iv:JaykAkv5jWXpLNxU0OlgBfPb0m8G8BBwTTNX+ItCec0=,tag:uxzwl74xI87rislZaqtMrQ==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:jkVs3j2qQQBBdmHTmQV6,iv:q7HPSNAbko305scbwbcs7WOcrqx7CSNaNBPP+dyU0UY=,tag:0cNN2PIzxIoqZP9XbjfWyA==,type:str]
-    #ENC[AES256_GCM,data:39Xl8GxA03UiKQKI3P+GQnRs7+lUNdfk1Gk4hUHY7cGeft5BYsuoReY75uQsvv3h8xzXypoBHQBpbVrJNLHAiEBrdb7vtatEnDmWanPYvKDTPNXAwgEx,iv:T/jGlo0yQp5PJyvHYxP9PajV5ouzvF81LuvcMQMo3Yk=,tag:QK6Ay9F3xd6UwTIUjQm2MA==,type:comment]
-    #ENC[AES256_GCM,data:4q3bTKalfgz0rtIfM9tk1ctjfG+t4eGZ46MPsfSUUyrc57SnT/venFM4ffWtNYVmVS+/X/M4bECbypw0bwSLc2VCapQSTjTMV0fvijLCJ7MNxBvZOtjoy4JZWQixPRAgNVZ8c7ommwAO63im3xOfy2/4bZbcZzSehh/FAg==,iv:5KXqy7ea2FWXc8VtDvjsoIvSwZVgtSwv/3bHYAOtZq4=,tag:2NK763l8fNY/CPL9A8TYpg==,type:comment]
-    #ENC[AES256_GCM,data:pQOzrzyTxyhhr5a5I/6BGL0kNr9F6cfgslUz5gYeSU9JX7d9Rnj1kOVUatZ8LS7cR2L0LJzZNrDDLpl22YPpAOYNgxWtPpojv5g8vbjMWFM=,iv:OcIgnuheY2OFGRqoQ2CwDK8yd88pOfbVHsRQHzdz93Q=,tag:dKobDFgAFFPouk2171mf6A==,type:comment]
-    #ENC[AES256_GCM,data:HIIovtZZquzpCS5yGpk7DEvaSuDblNjWdnd1XlAmk+eaMDAFFzEAOG6gtyZlhqSgr983+GYr,iv:RdQnGT9zBvJQFYs1JDglOneKmEOq3ICv3R1J8YrhtcE=,tag:via0ZuP8VC1I5wc/jUEsWw==,type:comment]
-    DDNS_URL: ENC[AES256_GCM,data:YPpY7h4ofADwJEujiKw=,iv:etbRjygY+vYP0lMp4DO/mF2Yvgd2M0bzrVX+ySO3df0=,tag:DA4V9hYDXX899woaX3ToUQ==,type:str]
-    DOMAIN_0: ENC[AES256_GCM,data:elXdTsEjCkd10ZsF,iv:imlA+SE1l3fooMv5ESVT8ZSaD9vRDY22d2QCXdjYskE=,tag:WePZGYMLUi2X8idB56PLRA==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:HPzMS7SBsg4MiYTiAIyeyiA=,iv:+DrwtkveIHkFh3QCgKN3G5frXTly7s79iLxsSbU0Jb0=,tag:Noxx4K9soiGA7LYh+lyiEQ==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:OIiQi9dVmC2vLiD5dgvsluUl3eaIPyXwZyR7Wp1Hs0A=,iv:aKbLrO5EmvZ3De0sOxykfmnOarwYdSqyu78LeeLwK9k=,tag:V1XpWfrUNhN7l4Lo9Zq66w==,type:str]
-    #ENC[AES256_GCM,data:TaaVSeNABkR555ekBWyC5cD6dPIJULWRQr/EoBU3UlrcgnMZ82PW6LnbFjZPfT7u5vUGn24Lj5yxgLmUpS+Wq0ZPuQ==,iv:0CHiMwjR5/iw1l1jgRbsGzkQXBkBv4dmktZ85wOcxiI=,tag:cjPveJSwNEv82nPsQ9WsXg==,type:comment]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:I/QgKdj66pIzAJng9RMGZUYK/egaM6DMy26vZVxzcZMQiGvSMg==,iv:hPggoL8CViG4YdqDA31QvyyBH4iRdcaM+x8gWaB5T4g=,tag:nv9ET7uQhx/mVEq6M9dtqg==,type:str]
-    #ENC[AES256_GCM,data:n0pKd/cXovLJw198wjLo2+xwuGKD/BuJAMGaT43myMnMWGQ/DKH4LOUxWWJXIfJa3NaW/bbL9D4=,iv:XitRfsG6VOf0WkB8ikRhCL+sCBTfO4C/8gXUP/zwgyc=,tag:wVciWwoC7uQiT34Widoj2w==,type:comment]
-    #ENC[AES256_GCM,data:bFQEV12wBi8SyjbHoaUfxlkuyqIWpdVW/g==,iv:gWGb38Kinm2YaaIA8cNyxqBB3qxVfzLslKS4vAG1Qik=,tag:/KbGYjCj2rv1NG+/j025kw==,type:comment]
-    #ENC[AES256_GCM,data:aqpv05ieKzjO7OeSq1lrNEM8UdC1NrnYxF0lnIy9NVhlHPrfb6C2FHVJ1491LTm9nZBfRbPpCp/QYE4hpuOdhDCXsXfttJRZdNtTV1Q=,iv:IN5hH7in3Y5DCvzve+/LH/wDKi+eF6TtLg6XtdgF+t4=,tag:OkR/vQGQLWqLeVkWzgs4MA==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:sNYhueJM162cah0dyV6PRdh+OZBOCWE+Q/LzN+qYKbmZo5BYThvnj5Msn4KzrNDL,iv:RE4uWTXv8GDeenQOgA/2c4yfcc/tKlpNmxlNpEUDyNo=,tag:nNmwwmALxKti6jvLFxC8Uw==,type:str]
-    #ENC[AES256_GCM,data:H8K1PdznBjpTr4sOB+vZ/B8THSwZ392dtzNa1gOcy9Nuy/IcyCuPhGs9r9HAaeH7lKMXZwq34UenzmTsHKccFsiz9lykTJU=,iv:q/8MwyrE1p/SmC2XwKqXbwkYgLYKOhBAK/gE54+pmp0=,tag:8kKjnrbxcvK94NH5OYXN0w==,type:comment]
-    #ENC[AES256_GCM,data:LJkmHugsHSCr/aaEfFeTvDdldhoh7ZrTfmk5Pd9PPnC361y8fZuyaDQFUqqdu6zUOi3dHX7E,iv:hoXr4aXvDSFAE+Aed625i16OVMzLI+qkRUsu9bq4CQY=,tag:uaD1ajltH8GBBo+wFmjhdA==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:iw5qDRp38g==,iv:HW639cM77miIsceEei/nDkrjsy6wmmr8aCdD/zGcBs8=,tag:6hEfBIDiQSxodJJPY2ay7w==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:tRMV8lZqRvMgFQmlgXpnUDS8YqM=,iv:L5bRhUFOqOGdQJweW4jRdw4nGWQWj7FkW4gkwsd7iYo=,tag:Zb1lM5mhWR0Mh2bg4s4XFg==,type:str]
-    #ENC[AES256_GCM,data:cUuheEACSQogyqraO9g=,iv:VOorO6cjvp+GjsS+NxQ2kezvr4Yf8SUzu2VvxYUlySQ=,tag:1X3X9IqZTmhmq7BmWiZ2vA==,type:comment]
-    PODNET: ENC[AES256_GCM,data:QIsScwbsMDLHrUEbsw==,iv:QjvufFf/4krg6eH1odmO9nw1UHF3hcRlM4cimjBF56U=,tag:s5lgWVDYiX6rm6twhd3q4Q==,type:str]
-    SVCNET: ENC[AES256_GCM,data:ySnNP7CKbzZpxRcpyg==,iv:bD18TWh8BiycnvSTwMmwaVEQ/RBSucMiPBqkvEBAu9o=,tag:2Ee9h2b4bBrOrNEfHOMIsw==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:q7FWBQ==,iv:ylBq9fKfjN8D+eacgc5ecoFNMtDTtgyu2yx0oquA1vQ=,tag:eeR/kQ738M0uE+GDFNOO8A==,type:str]
+    #ENC[AES256_GCM,data:4elcjGqdEtRhLaakZPhfyD0TuCaiG8bAExP0+I2frjIHsudCZlnXuPuw3bKCYvAbWYReLcribV+d2XIy8kSiphQ=,iv:+I43lK6oUQhu+IZvpPEUF4Yp7cB+BjgctIC7MFfRT7g=,tag:sNVamuzYP5qcUss8LKG9qQ==,type:comment]
+    #ENC[AES256_GCM,data:q5HVX7OXZhFyvhOzAMPd53un1j1WOEyHfkfLVIRaz8Km3169vbHe0nT2JQ0=,iv:/E64ymViHCfdfNnV0WWn/ZPrafPbjl+wE0AlpuNmzt4=,tag:11OWyPuBSXC9ZmDB80WOtw==,type:comment]
+    VIP: ENC[AES256_GCM,data:xwzFhYBlUyhXzO5LMg==,iv:YE17F//TwF+lH58uVRnUh+q5Wod4VHr+FFZO9BVUoas=,tag:RNE68vYp1u1XYlTdkM/+Wg==,type:str]
+    #ENC[AES256_GCM,data:ClaMjmvaAILQXsQveqI4ZS+eH6SdXm/Ahdwk,iv:weMGcYtqH6NTK1yCzpKgjKaphE8ILHFwHdHWK3yH1f4=,tag:m2QyTE71YTinKsTyI4av3A==,type:comment]
+    #ENC[AES256_GCM,data:OfmpMjy5cHIAgcDrCLvT8iRwY3oZFafVgdYofXE98aM4BiB4F1E9FnZ0V6HyrCQ6eEixHiLCaJA6haEvKlKxiSHrxd97QEr7BMVTlPUHzlCQmYgZANlBQNQ=,iv:7BrFBpQjKPgvA9Ob1VA45kgvimC15RcpP1xnxQmaOYM=,tag:O1hN/gmQvytE0mLeNR6epg==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:jyANf5L5Rwl9FCvh2s4=,iv:H9mb0IOgJIf6dAaKaQmqqfNHp+fDxCIkuYXDFzY/kIA=,tag:i60pr4iATxJQnpNT83vi8w==,type:str]
+    #ENC[AES256_GCM,data:CCsDaAuJai2fn4b4RDy2UkbE9igo3gS3Ur3lSDLlFwEcfA==,iv:FqaJp/mMzfahOPYlX6v+aysuFP1p+bLrKa8lnJgdsZY=,tag:MxQ9fqDJdnrTs3xoYmQMJQ==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:EicWc7ADKhauaqPe1A==,iv:umkQxFOXlOVMZAsAqj+xVfs7Ophc9dhILKJuliIMU4s=,tag:7y686P5WbbRZErcDlmVsiQ==,type:str]
+    #ENC[AES256_GCM,data:rMjhOK31Ld7tT+fY8j4bLFbtp+ZmrF4KFIuNUbf+pkidrMG/+CtjIMui8MWEZ2I=,iv:3LWF3a2fhoRf2YvrhDD1HbHN9RF0ux+55yK/RB2W9eU=,tag:hO85E1pSDOHsa7+CzqjtTA==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:EYGSQenrbYAwJoTb4/zzlVVuy+AcpKlmw+1EQsERaQ==,iv:hlLpSMauZBpzW0bfKep7GEVQkAy2ItHuh5UzNk36Be4=,tag:egQAdz2nR8tHdqE6ktpkJA==,type:str]
+    #ENC[AES256_GCM,data:fEopZTsVqrJNeV5cELu2BmgGDdeCefmtUJAfLy7NNanoSkFZ+STXup6DKYvJAvi0uLUgPizaC0t92YALUxttOPOAtCVAT2AxyrkelulgdTFQCA==,iv:AFRH2SoeWB2kgOJvaq8JkZK4nrprJG9zMDK6odKq4vs=,tag:sJiMBokaqS9CkdQLSo+aCg==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:ZEUu06vIEAJzdHs0bUr4,iv:cyfsA8Rvauux7Og0ccsFNy+mDYsstTu6ydLbj/Odyo0=,tag:hjhSTJOd8vjjHagvJaT8VA==,type:str]
+    #ENC[AES256_GCM,data:2Pj7MELuw+H+rrtVouvf7WGX83H3r8SA1NNSW+00qiN0,iv:IZ++YHPW9yIhbhJYyfFnMYvv+nQn/I7psvcOyWsUtnU=,tag:a2eMxY9rT4PrQIwaqYzmnA==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:bTeqaC1ldwyfy6yEY1Ko,iv:udpqV1TtXGvPLOuPUk8HKHtXXrZPJmwgpWLOWqf8o+k=,tag:SUyVnk5QHXjyWIzc8r5Hiw==,type:str]
+    #ENC[AES256_GCM,data:0uPH20ccsaDIPMRaKOiJJbpFx/qcWjPUwZM8YshxP4tCi58uQ++8lMzazLqbOO2Kiz4rYDolv0FdCxmhs7rPUzH+kt8P3nO3j8B7FoDysZc=,iv:ZG5BjcH6DYP7b9yLsfpmj8FvVIw5tGUbY+WvYgZENo0=,tag:8ZR7i7Hn/fSLHQ9ztdmFQg==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:ABghKFpPm4q3co9nXFT3,iv:K94IKouQ8xWjk2LGoCJikQdIlz9GEMe2AUtKe2qAuck=,tag:Zg5v2sKSwMEIzAgomYtHLQ==,type:str]
+    #ENC[AES256_GCM,data:9ug7RJUb/NRDD501L33zXBE1OuHdLJntS1Bg1vEhKu/7NKEEgL0du524CLHF+hsARSES9wHfSDRt7DM1wfILw9feMAtzOPRC1ZjwqVK6+3MfpTljcMGD,iv:NcllvR5+9aICNTdvpPbI3Qt4o0xCYvcROCGkFZiICA0=,tag:JCE1Mil19x+9TeVoYsDP3w==,type:comment]
+    #ENC[AES256_GCM,data:EdXwMFu0/hqQI1faFe5T0SX/qj+kof4DP4/XgUa1ikfhKep9UrgVdQl/5JJDBaw2O1f9Vg0RXdM0dLkv2x6mQ7vYsc183cgnNkak3SgWWB9iYrKklfROqurk5tHGGrYIilagLjEgqxkecsxym8vAjGNXJiFZJ+X9hSOo1Q==,iv:n71ARQtWz6+XhfXWkEhde63BanFVA33+4sWYtYrNwY0=,tag:R49EPNhsf1WT0F6yv+yY9g==,type:comment]
+    #ENC[AES256_GCM,data:dBrg0tw9NtkhPfeh97A6J59vMN4+j0I/YOfmrcJmD9RgcrNEJQm462opywNpbEU8F2FzoGKnrajlJ2lt/nLaao1VyHXLKd3Le7fQHe6jqG4=,iv:da/lpu8iMCPUYf1ghxnwKLzwdA0aQgB/EFXX9sjhSL8=,tag:U2jrE3feZiVZV0uMfvMRYw==,type:comment]
+    #ENC[AES256_GCM,data:775uSrgmIlT2I42e/TA2lF04awXcgX1MB32OzNLvKMvo6M2PSYdMtiM4An6Gfr0RQnsY4l24,iv:9mve5wrgPp9NTlqLKwWxZxPpzMhCekcwfLe93Dtuh5g=,tag:4BhTQeLHK4Tgw/4ypuBCZQ==,type:comment]
+    DDNS_URL: ENC[AES256_GCM,data:ZRK1Ji6an3cIqpNZtpQ=,iv:SurLHRqdWNzyh2eaa6SaF8jqsSr62jD8L9nSZIx8r1I=,tag:K1b45Gd5WN9sB4Qono15Rw==,type:str]
+    DOMAIN_0: ENC[AES256_GCM,data:W8C9pCX2WHK4yJhF,iv:+WAcOddV3MNr6LMTqNisK7HJgv4mwOHPfBxu4NE9fGU=,tag:7fe4KX8eZ90AM5gHqka80w==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:gLP83M01xqQjdcDv0cWYq+U=,iv:BT3peuH5+tcziisOEmg6AIU7Oy4/S3MUosFfR/gc4Dg=,tag:XJ7utMrYzyGpsPtwPxqTMg==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:onWaj/1YT1w2i/8M93luGiKwLNCIVBtIE6VDBa9yCv8=,iv:TJrgc5+FLpygkDhB156qGTN/XM3tIUaEOoD+T870ei0=,tag:xOOR7kx4vE7flSqS/DJbWQ==,type:str]
+    #ENC[AES256_GCM,data:20a2Pjqj+QJlbENbHijMW98GI11MAnwpplkgKRmTyrdfSk2jtjoI2bmFG702k5NGPzweZofRkyU1P7T6qUwuDqNVBg==,iv:jy5W50uHpVJ6uDof3YwtFV58cqj4qkzvKE2Z89TjVeI=,tag:p2ytaMyDli1uPLV1E06R3w==,type:comment]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:F6JdxU+sMca5cJHWV58KgGgY5dOVLTyCwBB/N0njzS8vev938g==,iv:Vr1OOWODWrKxjqcF7KMm6XK4CLAP5KvPDJj0IIMk08k=,tag:pAqvTRpLGjSdvV05WgL82A==,type:str]
+    #ENC[AES256_GCM,data:xIVjdPrhcx7XIBbjppb4wzXXOPYmnrxkKgOLRXT8TdMBIv704hLLuOsqze2xVNoIROYBNItwRXc=,iv:PVDcEMfImBFOX7iSJCwJ2lssr8T6oi9Fu2jEyqbInxs=,tag:sIsiapuLt5GY+XwkJN5xNQ==,type:comment]
+    #ENC[AES256_GCM,data:9Pt6kJ65ZNavBBeF+XfZJejUez9hBkCB/Q==,iv:PF2DazCn/3yjoG3pj9IK7O3pCXAjy7Vd3/LMr2Gsg8Y=,tag:Zq+UkJu+ZqHOheQDaO59jQ==,type:comment]
+    #ENC[AES256_GCM,data:1gRrTp4v+rJqoiOICBcrLAmj8hNeDxbPb+lAHN080Ku14GqaNuiBCNhyDSKLV79K1fjNAJT3gbTkM/777dtz3bLhqsV8mrwRDEm/loQ=,iv:MUB29nJAKsJbUDre5XpCzJVs5zlGQ48Jav27s9f9oQg=,tag:rp0otPrRUNdrhDvFRqBtTA==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:y2cW5hCJrqLLUsv8BkZleJYPgZkuFFNAvCjH7BrR3svqwOzEC+CsFo5kUl1GNStJ,iv:zs8b5E9TmHedINODgbVHdxoV4oCwwtSygVm8dgdPTJU=,tag:RnXHTSXXCeKZGZOSntWfWQ==,type:str]
+    #ENC[AES256_GCM,data:jFkE81O7w60fIJBe6M/uRS73j844NTO/YW3TEK6Z6/Gvaz/32FRyUjxvYO5b/0XfE7Rw2FpvyYVThZkWwnxHaNkdIrP4Ud4=,iv:5dzvQN20r8pLcaGY7IZxdCdgS0UiZTJs5gsfs8duwAo=,tag:+Lna+hbBW/7o97syh8w40A==,type:comment]
+    #ENC[AES256_GCM,data:tMsltII+GahyuUz2L2JuuPGvdK1LDPv2c1sss5mz4Tov+ZkSeIYt8VYPBZyvAF0+ok6GUQLl,iv:nq5GJkLO9FgF9as/BtxIZwqI4gBRmGGMXA+STCkU+Y4=,tag:ugSLNtANPo+gGYSPx3DVkw==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:1neazKWi/g==,iv:xahTRVGrbPVq1jOtR9EtKchd8BG5H7QnkdWRLxO3+ac=,tag:BK9eo9OXlUMS9Is3NrCsjA==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:cD0FvXKBwg2jEsNEh/OwBmrDdtk=,iv:b5VIdtPU97urBfwiNmZp9HAuDWTK1U68fxpmBO3Lpwc=,tag:DXmHrK2SlBiL9KFT5Z/sUg==,type:str]
+    #ENC[AES256_GCM,data:K7ny4TZIL5+htuXStlI=,iv:I1ui7/IcbSAxF/Pwm1vc9ecLRt6GLwdjadXy+qysaPw=,tag:6lfEfcvFpwU5JwNcA8zZdQ==,type:comment]
+    PODNET: ENC[AES256_GCM,data:TbrL8VavarqhGiukVw==,iv:T+qPNFp2v70XP/mstsjjoKY4tX0SHxvLn9lHRRP/7dQ=,tag:LbpgdPTGD4R07lXG8NxmgQ==,type:str]
+    SVCNET: ENC[AES256_GCM,data:VUobKPSeULkKpL336Q==,iv:kPy07mL3N1Te5yT/CTl1d+w0y+nqjdMjy3rfJTOr3vQ=,tag:p1SHi6+15BWBaMTz3ynxjw==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:fYSVog==,iv:5veccXEPUeh7tJPE4kkaO+vsOwb0qKhC9ohH2SN7gQs=,tag:PR+OPvvHkkIkwPmRYrctXw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -52,14 +52,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBlazlaNlowYmVEaUh1VE92
-            cXZVQ0tiOS9nL2QwdWF6amRMb0dGa3d4ajNjClUzQ3lVV0IxZGVCM1ZoTmFTNTRp
-            b0ZOTmZXclRoamtEa0JHVUNVckQ1WFUKLS0tIDFNdGdkbXFkODNTQ0tLUThobVZw
-            Q0JvMkVxVm1MUlhMOE11clg4ZERXYWsK9aKFReJpNBmwa+jHlKUJbzzMbCPvbNJA
-            V1OLJz8PeaHvZuIsw42iIdHjLvcKDifAxBXur2Xr0zJ3yEhmAHgnzQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBaM3FsN0E2OWpqek05bit4
+            UzMwa0dkV0VTN1NqK2dKRVNucDlFdExFSDBzCnF2cy9tZXRWL2owc0pqZG5mUkw5
+            YmhkUXRYWnMvWVhGRWViczdSNmRCc2sKLS0tIHcrbXZaSVpzbm5XYS9UWFE4a2cz
+            K2k0T0Zza2tGVlk5ZHBjc21hNU1idXcKGeyiZfu9pmHq+kra68GPm8htT4exmXtO
+            SE3IMNdTwo+8d88j037GUfrrud8NI1GWfrNtF0JbcEVqTCfL+gsuDw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-01T18:46:24Z"
-    mac: ENC[AES256_GCM,data:c7XTwc9KpOwVg4Odnti0py+uXmwUs2JJGcP25DfXPpY9UvVHkvnTXIfbRIFJrT+v7kL9CO8nA50WPGGv9gW2Op3hnKKUR0nsEtt90FLgURT2Bh/rrrCS0gjt7VYZPHWArWItMPH6EEojekhUj4OMzeKHjES6kFN+JFGM/5eGGAU=,iv:JZuK/WVae8KrQgzPfTbiKrXH7Y/8BVAMbv89ouFF94o=,tag:eYinOw4AqeKlXn+5L6MigA==,type:str]
+    lastmodified: "2025-01-01T18:56:29Z"
+    mac: ENC[AES256_GCM,data:mtuh0HmZBH3CccqarJjsOXtD+F0u1F8fb0ckyunYhnYVgNzEu4aZiOqvXSqkQvNGAIzanGPHlUEySDmV8+q0aJ9GxpDdGSZtAfGKvyWjG49z0KgLFiCrzVTjMWinfPeP5Ab4XBa5OptX0OfgZns96JGDLKEGKiphP6ChKX9t/Vs=,iv:FJLo9n8sbluiXkLLU7EbpZt5DVJ2P0EBoW6MSafjkSg=,tag:ZsT66ThPiqE+pDB9IH9MaA==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
